# see-cleverly

./: .gitignore  README.md  Readme.md  pyproject.toml  server.py
.github/workflows/: web.yml
docker/: docker-compose.yml  env.example
migrations/: 20240823_01_H46U6-setup.rollback.sql  20240823_01_H46U6-setup.sql
see_cleverly/: __init__.py
see_cleverly/api/: __init__.py
see_cleverly/database/: __init__.py  pg.py
see_cleverly/plugins/: __init__.py  api.py  base.py
see_cleverly/plugins/light/: __init__.py  api.py
see_cleverly/plugins/light/db/: __init__.py  repository.py
src/see_cleverly/: __init__.py
web/: hugo.toml
web/config/_default/: menus.en.toml  params.toml
web/content/english/: _index.md
web/content/english/about/: _index.md
web/content/english/pages/: gated-community.md  retail.md
web/content/english/sections/: testimonial.md
web/themes/hugoplate/layouts/: index.html
web/themes/hugoplate/layouts/partials/: page-header.html
web/themes/hugoplate/layouts/partials/essentials/: footer.html
